--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://quartz.jzhao.xyz/"
 languageCode = "en-us"
-googleAnalytics = "G-XYFD95KB4J"
+googleAnalytics = ""
 relativeURLs = false
 disablePathToLower = true
 ignoreFiles = [
@@ -10,6 +10,7 @@ ignoreFiles = [
 summaryLength = 20
 paginate = 10
 enableGitInfo = true
+pluralizelisttitles = false
 
 [markup]
     [markup.tableOfContents]
