--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ public
 resources
 .idea
 content/.obsidian
+content/journal
 content/.obsidian.vimrc
 assets/indices/linkIndex.json
 assets/indices/contentIndex.json
