--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://quartz.jzhao.xyz/"
+baseURL = "https://pawel-kica.github.io/brain/"
 languageCode = "en-us"
 googleAnalytics = ""
 relativeURLs = false
