New: two day rule

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -19,6 +19,6 @@ page_title:
   "Brain"
 links:
   - link_name: Linkedin
-    link: https://www.linkedin.com/in/pawe%C5%82-kica-945534225/
+    link: https://www.linkedin.com/in/Pawel-Kica/
   - link_name: Github
     link: https://github.com/Pawel-Kica
