--- a/data/config.yaml
+++ b/data/config.yaml
@@ -20,5 +20,7 @@ page_title:
 links:
   - link_name: Linkedin
     link: https://www.linkedin.com/in/Pawel-Kica/
+  - link_name: Website
+    link: https://portfolio-pawelkica.vercel.app/
   - link_name: Github
     link: https://github.com/Pawel-Kica
